# flask-tut

./: README.md
basic-freeCodeCamp-tut/: README.md  app.py  pyproject.toml  test.db
basic-freeCodeCamp-tut/templates/: base.html  index.html
corey_tutorial/: flaskblog.py
corey_tutorial/templates/: about.html  home.html  layout.html  navigation.html
first_api/: .gitignore  README.md
first_api/src/: routes.py
first_api/src/templates/: index.html
org_tutorial/: README.md
org_tutorial/flaskr/: __init__.py  auth.py  db.py
org_tutorial/flaskr/templates/: base.html
org_tutorial/flaskr/templates/auth/: register.html
